welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.code
def caughtSpeeding(speed:Int, isBirthday:Boolean):Int = {
	var v :Int = speed
	if (isBirthday == false){
		v = speed-5
	}
	if (0<=v && v<=60){
		return 0
	}
	if (61<=v && v<=80){
		return 1
	}
	if (81<= v){
		return 2
	}
}
